[package]
name = "danmu"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.1", features = [] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
plutus = { git = "https://github.com/ridesun/Plutus" }
anyhow = "1.0.75"
tokio = { version = "1.32.0", features = ["full"] }
lazy_static = "1.4.0"
sled = "1.0.0-alpha.118"
bincode = "2.0.0-rc.3"
zerocopy = { version = "0.7.6", features = ["derive"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
